force-app/main/default/objects/copadoccmint__Callout_Log__c/fields/copadoccmint__Project__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>copado__Project__c</referenceTo>
    <relationshipLabel>Callout Logs</relationshipLabel>
    <relationshipName>Callout_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>