force-app/main/default/objects/copadoccmint__Callout_Log__c/fields/copadoccmint__Response_Body__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Response_Body__c</fullName>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>