force-app/main/default/objects/copadoccmint__Callout_Log__c/fields/copadoccmint__Status__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>