force-app/main/default/objects/copadoccmint__Callout_Log__c/fields/copadoccmint__Status_Code__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Status_Code__c</fullName>
    <label>Status Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>